--- a/src/app/theme/components/header/header.component.html
+++ b/src/app/theme/components/header/header.component.html
@@ -1,15 +1,18 @@
-<nav class="navbar sticky-top navbar-dark bg-light">
+<nav class="navbar sticky-top navbar-dark header">
   <div class="container-fluid">
     <a class="navbar-brand">
-      <img src="../../../../assets/logo-tech4germany.png" class="rounded float-start" alt="...">
+      <img src="../../../../assets/digitalservice4germany-logo-white.svg" class="rounded float-start " alt="...">
+      <h1 class="display-5">
+        GovData - Dashbaord
+      </h1>
     </a>
-    <div >
-      <h6 class="d-flex">
-        
-      </h6>
-      <h6 class="d-flex">
-        
-      </h6>
+    
+    <div>
+      <div class="d-flex">
+        <i (click)="goToLink('https://github.com/ValiHar/GovDataDashboard')" class="d-flex bi bi-github"></i>
+        <div (click)="goToLink('https://www.linkedin.com/in/vlh-digital/')" class="avatar" >
+        </div>
+      </div>
     </div>
   </div>
 </nav>
