--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -1,9 +1,60 @@
 img {
   margin-left: 1vw;
+  margin-right: 1vw;
   padding: 0.5%;
-  width: 7vw;
+  padding-bottom: 0%;
+  width: 70px;
 }
 
 h6 {
   color: white;
+}
+
+.header {
+  background-color: #20203B;
+}
+
+.navbar {
+  padding-bottom: 0%;
+}
+
+.display-5 {
+  color: white;
+  padding-left: 40px;
+  font-size: 1.8rem;
+}
+
+p {
+  color: white;
+}
+
+.avatar {
+  background-image: url('../../../../assets/Passbild_klein.jpg');
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  margin-right: 10px;
+
+}
+
+.avatar:hover {
+  -webkit-box-shadow: 0px 0px 17px 1px rgba(0, 0, 0, 0.86);
+  box-shadow: 0px 0px 17px 1px rgba(0, 0, 0, 0.86);
+}
+
+i {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  color: white;
+  font-size: 30pt;
+  border-radius: 50%;
+}
+
+i:hover {
+  //color: #171515;
+  -webkit-box-shadow: 0px 0px 17px 1px rgba(0, 0, 0, 0.86);
+  box-shadow: 0px 0px 17px 1px rgba(0, 0, 0, 0.86);
 }
