--- a/src/app/theme/components/footer/footer.component.html
+++ b/src/app/theme/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar bottom navbar-light bg-light">
+<nav class="navbar sticky bottom navbar-dark footer">
   <a class="navbar-brand" href="#">Fixed bottom</a>
 </nav>
