Rework footer and update header padding

--- a/src/app/theme/components/footer/footer.component.scss
+++ b/src/app/theme/components/footer/footer.component.scss
@@ -1,3 +1,9 @@
 .footer {
-    background-color: #20203B;
-  }
+  background-color: #20203B;
+}
+
+.foot-note {
+  text-align: end;
+  margin-right: 15px;
+  cursor: pointer;
+}
