--- a/src/app/theme/components/footer/footer.component.html
+++ b/src/app/theme/components/footer/footer.component.html
@@ -1,3 +1,7 @@
-<nav class="navbar sticky bottom navbar-dark footer">
-  <a class="navbar-brand" href="#">Fixed bottom</a>
+<nav class="navbar bottom navbar-dark footer">
+  <div class="d-flex ">
+
+  </div>
+  <p class="text-muted foot-note" (click)="goToLink('https://github.com/tech4germany/coding-challenge')"> This website is part of the Tech4Germany coding challenge 2022. It was created by
+    Valentin Hartig. </p>
 </nav>
