--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -18,10 +18,15 @@ h6 {
   padding-bottom: 0%;
 }
 
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
 .display-5 {
   color: white;
-  padding-left: 40px;
   font-size: 1.8rem;
+  text-align: center;
 }
 
 p {
@@ -36,6 +41,7 @@ p {
   background-position: center;
   border-radius: 50%;
   margin-right: 10px;
+  cursor: pointer;
 
 }
 
@@ -45,6 +51,7 @@ p {
 }
 
 i {
+  cursor: pointer;
   width: 40px;
   height: 40px;
   margin-right: 10px;
