Add space a little mor space on the dashboard so it dosent look so cramped

--- a/src/app/content/dashboard/dashboard.component.html
+++ b/src/app/content/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
       public data portal so far.
     </p>
   </div>
-  <div class="row">
+  <div class="row pie-chart">
     <div class="col-4">
       <div class="card">
         <div class="card-body">
@@ -43,7 +43,7 @@
       <app-pie-chart></app-pie-chart>
     </div>
   </div>
-  <div class="row">
+  <div class="row bar-chart">
     <div class="col-12">
       <div class="card">
         <div class="card-body">
@@ -51,7 +51,7 @@
             Distribution of datasets relative to neighbors
           </h5>
           <p class="card-text">
-            The bar chart below provides another method to explore the distribution of published datasets over the german federal ministries. In the bar chart the ministries are sorted by the amout of datasets they've shared, as in the nightingale chart.
+            The bar chart below provides another method to explore the distribution of published datasets over the german federal ministries. In the bar chart the ministries are sorted by the amount of datasets they've shared, as in the nightingale chart.
           </p>
           <p class="card-text">
             However, the bar chart enables you to easily compare a ministry to its neighbors, by zooming into the diagram with the mouse wheel. Hovering over the bar of a ministry again shows a tooltip with specific information about the ministry. 
