--- a/src/app/content/dashboard/dashboard.component.scss
+++ b/src/app/content/dashboard/dashboard.component.scss
@@ -29,6 +29,20 @@
 }
 
 .header {
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    padding: 1%;
+}
+
+.pie-chart {
+    margin-top: 6vh;
+    margin-bottom: 6vh;
+    padding: 1%;
+}
+
+.bar-chart {
+    margin-top: 6vh;
+    margin-bottom: 6vh;
     padding: 1%;
 }
 
