--- a/src/app/content/dashboard/dashboard.component.html
+++ b/src/app/content/dashboard/dashboard.component.html
@@ -27,13 +27,13 @@
             Federal Ministries.
           </p>
           <p class="card-text">
-            To filter the chart, click on the ministry names in the legend. This will hide/show the clicked ministry in
-            the diagram. You can also select/deselect all ministries or invert the diagram with the buttons on the left
+            To filter the chart, click on the ministry name in the legend. This will show/hide the clicked ministry in
+            the diagram. You can also select/deselect all ministries or invert the diagram using the buttons on the left
             side of the legend.
           </p>
           <p class="card-text">
-            Hovering over the name of a ministry shows a tooltip that displays the precise number of datasets the
-            ministry shared, as well as its percentage relative to all currently displayed ministries.
+            Hovering the mouse cursor over the name of a ministry will display a tooltip indicating the exact number of
+            records the ministry has shared and its percentage share in relation to all currently displayed ministries.
           </p>
 
         </div>
@@ -51,10 +51,14 @@
             Distribution of datasets relative to neighbors
           </h5>
           <p class="card-text">
-            The bar chart below provides another method to explore the distribution of published datasets over the german federal ministries. In the bar chart the ministries are sorted by the amount of datasets they've shared, as in the nightingale chart.
+            The following bar chart provides an additional way to examine the distribution of released datasets among
+            German federal ministries. In the bar chart, ministries are sorted by the number of records they have
+            released, as in the Nightingale chart.
           </p>
           <p class="card-text">
-            However, the bar chart enables you to easily compare a ministry to its neighbors, by zooming into the diagram with the mouse wheel. Hovering over the bar of a ministry again shows a tooltip with specific information about the ministry. 
+            However, the bar chart allows you to compare a ministry with its neighbors by zooming into the chart with
+            the mouse wheel. When you move the mouse pointer over a ministry's bar, a tooltip appears with specific
+            information about the ministry.
           </p>
         </div>
       </div>
